--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,32 @@
-<p>
-  recipe-detail works!
-</p>
+<div class="row">
+  <div class="col-12">
+    <img src="" alt="" class="img-fluid">
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
+    <h1>Recipe Name</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
+    <a class="nav-link white dropdown-toggle" href="#" id="recipeDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Manage Recipe
+    </a>
+    <div class="dropdown-menu" aria-labelledby="recipeDropdown">
+      <a class="dropdown-item" href="#">To Shopping List</a>
+      <a class="dropdown-item" href="#">Edit Recipe</a>
+      <a class="dropdown-item" href="#">Delete Recipe</a>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
+    Description
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
+    Ingredients
+  </div>
+</div>
