--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,12 @@
-<div class="row">
+
+<div class="row mt-5">
   <div class="col-12">
-    <img src="" alt="" class="img-fluid">
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
   <div class="col-12">
-    <h1>Recipe Name</h1>
+    <img src="{{ recipe.imagePath }}" alt="" class="img-fluid" style="max-height: 300px">
   </div>
 </div>
 <div class="row">
@@ -22,7 +23,7 @@
 </div>
 <div class="row">
   <div class="col-12">
-    Description
+    {{ recipe.description }}
   </div>
 </div>
 <div class="row">
