--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,17 +7,10 @@
 
 <div class="row">
   <div class="col-12 list-group">
-    <a href="#" class="list-group-item list-group-item-action p-0" *ngFor="let recipe of recipes">
-      <div class="row justify-content-between">
-        <div class="col-8 pl-4 mt-2">
-          <h4 class="mb-1">{{ recipe.name }}</h4>
-          <p class="mb-1">{{ recipe.description }}</p>
-        </div>
-        <div class="col-4">
-          <img src="{{ recipe.imagePath }}" alt="recipe-image" class="img-fluid img-height">
-        </div>
-      </div>
-    </a>
-    <app-recipe-item></app-recipe-item>
+    <app-recipe-item 
+    *ngFor="let recipe of recipes" 
+    [recipe]="recipe"
+    (recipeSelected)="onRecipeSelected(recipe)"
+    ></app-recipe-item>
   </div>
 </div>
