--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,11 @@
 <div class="row">
   <div class="col-md-6">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list (recipeSelected)="selectedRecipe = $event"></app-recipe-list>
   </div>
   <div class="col-md-6">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail *ngIf="selectedRecipe; else infoText" [recipe]="selectedRecipe"></app-recipe-detail>
+    <ng-template #infoText>
+      <p class="mt-5">Please select a recipe</p>
+    </ng-template>
   </div>
 </div>
