--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,16 +4,18 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control">
+          <input type="text" id="name" class="form-control" #nameInput>
         </div>
         <div class="col-sm-2 form-group">
             <label for="amount">Amount</label>
-            <input type="number" id="amount" class="form-control">
+            <input type="number" id="amount" class="form-control" #amountInput>
           </div>
       </div>
       <div class="row">
         <div class="col-12">
-          <button type="submit" class="btn material-light m-1">
+          <button type="button" class="btn material-light m-1"
+          (click)="onAddIngredient()"
+          >
             Add
           </button>
           <button type="button" class="btn material-normal m-1">
