--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row mt-5">
   <div class="col-12">
-    <app-shopping-edit></app-shopping-edit>
+    <app-shopping-edit (ingredientAdded)="onIngredientAdded($event)"></app-shopping-edit>
     <hr>
     <ul class="list-group">
       <a 
