--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -11,13 +11,15 @@
 </div>
 <div class="row">
   <div class="col-12">
-    <a class="nav-link white dropdown-toggle" href="#" id="recipeDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Manage Recipe
-    </a>
-    <div class="dropdown-menu" aria-labelledby="recipeDropdown">
-      <a class="dropdown-item" href="#">To Shopping List</a>
-      <a class="dropdown-item" href="#">Edit Recipe</a>
-      <a class="dropdown-item" href="#">Delete Recipe</a>
+    <div class="btn-group" appDropdown>
+      <button class="btn btn-secondary dropdown-toggle" href="#" id="recipeDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Manage Recipe
+      </button>
+      <div class="dropdown-menu" aria-labelledby="recipeDropdown">
+        <a class="dropdown-item" href="#">To Shopping List</a>
+        <a class="dropdown-item" href="#">Edit Recipe</a>
+        <a class="dropdown-item" href="#">Delete Recipe</a>
+      </div>
     </div>
   </div>
 </div>
