--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,7 +16,7 @@
         Manage Recipe
       </button>
       <div class="dropdown-menu" aria-labelledby="recipeDropdown">
-        <a class="dropdown-item" href="#">To Shopping List</a>
+        <a class="dropdown-item" href="#" (click)="sendIngredientsToShopping(recipe.ingredients)">To Shopping List</a>
         <a class="dropdown-item" href="#">Edit Recipe</a>
         <a class="dropdown-item" href="#">Delete Recipe</a>
       </div>
@@ -30,6 +30,8 @@
 </div>
 <div class="row">
   <div class="col-12">
-    Ingredients
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">{{ ingredient.name }} | {{ ingredient.amount }}</li>
+    </ul>
   </div>
 </div>
