--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<app-header (featureSelected)="onNavigate($event)"></app-header>
-
+<app-header></app-header>
 <div class="container">
-  <app-recipes *ngIf="loadedFeature === 'recipe'"></app-recipes>
-  <app-shopping-list *ngIf="loadedFeature === 'shopping-list'"></app-shopping-list>
+  <router-outlet></router-outlet>
 </div>
-
-<router-outlet></router-outlet>
