--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,10 +10,14 @@
     <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link white" href="#" (click)="onSelect('recipe')">Recipes</a>
+          <a class="nav-link white" href="#" 
+          routerLink="/recipe">
+          Recipes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link white" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+          <a class="nav-link white" href="#"
+          routerLink="/shopping">
+            Shopping List</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
