--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-color">
   <div class="container">
-    <a href="#" class="navbar-brand">Recipe App</a>
+    <a class="navbar-brand nav-link white">Recipe App</a>
 
     <button (click)="collapsed = !collapsed" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,24 +10,24 @@
     <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link white" href="#" 
+          <a class="nav-link white" 
           routerLink="/recipe">
           Recipes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link white" href="#"
+          <a class="nav-link white"
           routerLink="/shopping">
             Shopping List</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown" appDropdown>
-          <a class="nav-link white dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="white dropdown-toggle nav-link" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item">Action</a>
+            <a class="dropdown-item">Another action</a>
           </div>
         </li>
       </ul>
