--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -9,29 +9,33 @@
     <img src="{{ recipe.imagePath }}" alt="" class="img-fluid" style="max-height: 300px">
   </div>
 </div>
+
+<div class="row my-2">
+  <div class="col-12">
+    {{ recipe.description }}
+  </div>
+</div>
+<hr>
 <div class="row">
+  <div class="col-12">
+    <p>Ingredients:</p>
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">{{ ingredient.name }} | {{ ingredient.amount }}</li>
+    </ul>
+  </div>
+</div>
+
+<div class="row mt-3">
   <div class="col-12">
     <div class="btn-group" appDropdown>
       <button class="btn btn-secondary dropdown-toggle" href="#" id="recipeDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Manage Recipe
       </button>
       <div class="dropdown-menu" aria-labelledby="recipeDropdown">
-        <a class="dropdown-item" href="#" (click)="sendIngredientsToShopping(recipe.ingredients)">To Shopping List</a>
-        <a class="dropdown-item" href="#">Edit Recipe</a>
-        <a class="dropdown-item" href="#">Delete Recipe</a>
+        <a class="dropdown-item" (click)="sendIngredientsToShopping(recipe.ingredients)">To Shopping List</a>
+        <a class="dropdown-item" >Edit Recipe</a>
+        <a class="dropdown-item" >Delete Recipe</a>
       </div>
     </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-12">
-    {{ recipe.description }}
-  </div>
-</div>
-<div class="row">
-  <div class="col-12">
-    <ul class="list-group">
-      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">{{ ingredient.name }} | {{ ingredient.amount }}</li>
-    </ul>
   </div>
 </div>
