--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,8 +8,8 @@
 <div class="row">
   <div class="col-12 list-group">
     <app-recipe-item 
-    *ngFor="let recipe of recipes" 
-    [recipe]="recipe"
+    *ngFor="let recipe of recipes; let i = index" 
+    [recipe]="recipe" [id]="i"
     ></app-recipe-item>
   </div>
 </div>
