--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -32,9 +32,9 @@
         Manage Recipe
       </button>
       <div class="dropdown-menu" aria-labelledby="recipeDropdown">
-        <a class="dropdown-item" (click)="sendIngredientsToShopping(recipe.ingredients)">To Shopping List</a>
-        <a class="dropdown-item" >Edit Recipe</a>
-        <a class="dropdown-item" >Delete Recipe</a>
+        <a class="dropdown-item" style="cursor: pointer;" (click)="sendIngredientsToShopping(recipe.ingredients)">To Shopping List</a>
+        <a class="dropdown-item" style="cursor: pointer;" [routerLink]="['edit']">Edit Recipe</a>
+        <a class="dropdown-item" style="cursor: pointer;" >Delete Recipe</a>
       </div>
     </div>
   </div>
