--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,7 @@
 <a
-(click)="onSelected()" class="list-group-item list-group-item-action p-0">
+[routerLink]="[id]" 
+routerLinkActive="active"
+class="list-group-item list-group-item-action p-0">
   <div class="row justify-content-between">
     <div class="col-8 pl-4 mt-2">
       <h4 class="mb-1">{{ recipe.name }}</h4>
