added shopping list edit forms

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -2,10 +2,12 @@
   <div class="col-12">
     <app-shopping-edit></app-shopping-edit>
     <hr>
+    <small class="text-muted">Click on an item to edit it</small>
     <ul class="list-group">
       <a 
-      href="#" class="list-group-item"
-      *ngFor="let ingredient of ingredients"
+      class="list-group-item clickable"
+      *ngFor="let ingredient of ingredients; let i = index"
+      (click)="onClickIngredient(i)"
       >
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>  
