--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,27 +1,27 @@
 <div class="row">
   <div class="col-12">
-    <form>
+    <form [formGroup]="ingredientForm" (ngSubmit)="onAddIngredient()">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameInput>
+          <input type="text" id="name" class="form-control" formControlName='name'>
         </div>
         <div class="col-sm-2 form-group">
-            <label for="amount">Amount</label>
-            <input type="number" id="amount" class="form-control" #amountInput>
-          </div>
+          <label for="amount">Amount</label>
+          <input type="number" id="amount" class="form-control" formControlName='amount'>
+        </div>
       </div>
       <div class="row">
         <div class="col-12">
-          <button type="button" class="btn material-light m-1"
-          (click)="onAddIngredient()"
+          <button type="submit" class="btn material-light m-1"
+          [disabled]="!ingredientForm.valid"
           >
-            Add
+            {{ editMode ? 'Update' : 'Add' }}
           </button>
-          <button type="button" class="btn material-normal m-1">
+          <button type="button" class="btn material-normal m-1" (click)="onClear()">
             Clear 
           </button>
-          <button type="button" class="btn material-normal m-1">
+          <button type="button" class="btn material-normal m-1" (click)="onDelete()" [disabled]="!editMode">
             Delete
           </button>
         </div>
