fixed rendering of delete button

--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -21,7 +21,7 @@
           <button type="button" class="btn material-normal m-1" (click)="onClear()">
             Clear 
           </button>
-          <button type="button" class="btn material-normal m-1" (click)="onDelete()" [disabled]="!editMode">
+          <button type="button" class="btn material-normal m-1" (click)="onDelete()" *ngIf="editMode">
             Delete
           </button>
         </div>
