--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,6 +1,62 @@
 <div class="row mt-5">
   <div class="col-12">
-    {{ id }}
-    {{ editMode }}
+    <div class="row">
+      <div class="col-12">
+        <h5>{{ editMode ? 'Editing Recipe' : 'Add Recipe' }}</h5>
+        <hr>
+      </div>
+    </div>
+    <form [formGroup]="recipeEditForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" class="form-control" formControlName="name">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="form-group">
+            <label for="imagePath">Image URL</label>
+            <input type="text" id="imagePath" class="form-control" formControlName="imagePath" #imageUrl>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-3">
+        <div class="col-12">
+          <img src="{{ imageUrl.value }}" alt="" height="200">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea type="text" id="description" class="form-control" rows="6" formControlName="description"></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-8">
+              <input type="text" class="form-control">
+            </div>
+            <div class="col-2">
+              <input type="number" class="form-control">
+            </div>
+            <div class="col-2">
+              <button class="btn btn-danger">X</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-12">
+          <button class="mr-3 btn material-light" type="submit">Save</button>
+          <button class="btn material-normal" type="button">Cancel</button>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
