--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,12 +1,14 @@
 <div class="row mt-5">
   <div class="col-12">
-    <div class="row">
-      <div class="col-12">
-        <h5>{{ editMode ? 'Editing Recipe' : 'Add Recipe' }}</h5>
-        <hr>
-      </div>
-    </div>
     <form [formGroup]="recipeEditForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-12">
+          <h5>{{ editMode ? 'Editing Recipe' : 'Add Recipe' }} 
+          <button class="mx-3 btn material-light" type="submit" [disabled]="!recipeEditForm.valid">Save</button>
+          <button class="btn material-normal" type="button" (click)="onCancel()">Cancel</button></h5>
+          <hr>
+        </div>
+      </div>
       <div class="row">
         <div class="col-12">
           <div class="form-group">
@@ -37,24 +39,28 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12">
-          <div class="row">
+        <div class="col-12" formArrayName="ingredients">
+          <div class="row" 
+          *ngFor="let ingredientCtrl of getControls(); let i = index"
+          [formGroupName]="i">
             <div class="col-8">
-              <input type="text" class="form-control">
+              <input type="text" class="form-control" formControlName="name">
             </div>
             <div class="col-2">
-              <input type="number" class="form-control">
+              <input type="number" class="form-control" formControlName="amount">
             </div>
             <div class="col-2">
-              <button class="btn btn-danger">X</button>
+              <button class="btn btn-danger" (click)=onDeleteIngredient(i)>X</button>
             </div>
           </div>
         </div>
       </div>
       <div class="row mt-3">
         <div class="col-12">
-          <button class="mr-3 btn material-light" type="submit">Save</button>
-          <button class="btn material-normal" type="button">Cancel</button>
+          <button class="btn btn-success mb-5"
+          type="button"
+          (click)="onAddIngredient()"
+          >Add Ingredient</button>
         </div>
       </div>
     </form>
