added http methods for saving and retrieving recipes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,8 +26,8 @@
             Dropdown
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item">Action</a>
-            <a class="dropdown-item">Another action</a>
+            <a class="dropdown-item" (click)="onSaveRecipes()">Save recipes</a>
+            <a class="dropdown-item" (click)="onFetchRecipes()">Fetch recipes</a>
           </div>
         </li>
       </ul>
