--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,11 +19,16 @@
           routerLink="/shopping">
             Shopping List</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link white"
+          routerLink="/auth">
+            Authenticate</a>
+        </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown" appDropdown>
           <a class="white dropdown-toggle nav-link" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
+            Manage Recipes
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" (click)="onSaveRecipes()">Save recipes</a>
