--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
 
     <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="isAuthenticated">
           <a class="nav-link white" 
           routerLink="/recipe">
           Recipes</a>
@@ -19,14 +19,18 @@
           routerLink="/shopping">
             Shopping List</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!isAuthenticated">
           <a class="nav-link white"
           routerLink="/auth">
             Authenticate</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown" appDropdown>
+        <li class="nav-item" *ngIf="isAuthenticated">
+          <a class="nav-link white" style="cursor: pointer;">
+            Logout</a>
+        </li>
+        <li class="nav-item dropdown" appDropdown style="cursor: pointer;" *ngIf="isAuthenticated">
           <a class="white dropdown-toggle nav-link" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Manage Recipes
           </a>
