added auto login, logout using localstorage

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,7 +27,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item" *ngIf="isAuthenticated">
-          <a class="nav-link white" style="cursor: pointer;">
+          <a class="nav-link white" style="cursor: pointer;" (click)="onLogOut()">
             Logout</a>
         </li>
         <li class="nav-item dropdown" appDropdown style="cursor: pointer;" *ngIf="isAuthenticated">
