--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -25,7 +25,7 @@
   </div>
 </div>
 
-<div class="row mt-3">
+<div class="row mt-3 mb-5">
   <div class="col-12">
     <div class="btn-group" appDropdown>
       <button class="btn btn-secondary dropdown-toggle" href="#" id="recipeDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
