--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-lg-6">
     <app-recipe-list></app-recipe-list>
   </div>
-  <div class="col-md-6">
+  <div class="col-lg-6">
     <router-outlet></router-outlet>
   </div>
 </div>
