--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,8 +1,12 @@
 <div class="row mt-5">
   <div class="col-12">
+    <div class="mb-5">
+      <h3 class="text-center">Shopping List</h3>
+      <hr>
+    </div>
     <app-shopping-edit></app-shopping-edit>
     <hr>
-    <small class="text-muted">Click on an item to edit it</small>
+    <small class="text-muted">{{ ingredients.length === 0 ? 'Add an ingredient with the form above' : 'Click on an item to edit it' }}</small>
     <ul class="list-group">
       <a 
       class="list-group-item clickable"
