--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,4 @@
+<ng-template appPlaceholder></ng-template>
 <div class="container">
 <div class="row justify-content-around mt-5">
     <div class="col-12 col-md-6 text-center mt-5" *ngIf="isLoading">
@@ -7,9 +8,6 @@
         <h2 class="text-center">
             {{ isLoginMode ? 'Welcome Back!' : 'Join Us Today' }}</h2>
         <hr>
-        <div *ngIf="error" class="errorMessage">
-            An error occured: {{ error }}
-        </div>
         <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label for="email">E-Mail</label>
