--- a/src/app/recipes/recipe-blank/recipe-blank.component.html
+++ b/src/app/recipes/recipe-blank/recipe-blank.component.html
@@ -2,6 +2,7 @@
 <div class="col-12">
 <h5 class="my-3 mb-5">Welcome to the Recipe App</h5>
 <p>Over here we have a list of wonderful recipes for you to try at home.</p>
-<p>Click on a recipe to find out more.</p>
+<p>Click on a recipe to find out more and you may edit or add new recipes</p>
+<p>To save recipes in database, click on the <em>'Manage Recipes'</em>' dropdown above and then click on <em>'Save Recipes'</em></p>
 </div>
 </div>
